--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,11 +3,12 @@
     --b-gray: #c6c6c6
 }
 body {
+    margin: 0;
     background-color: #f9f9f9;
     font-family: Tahoma, Arial, sans-serif;
 }
 #app {
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     padding: 40px 0;
     background-color: white;
@@ -49,6 +50,7 @@ body {
 }
 .qr-code-container {
     width: 80%;
+    /*height: 350px;*/
     border: 1px solid #ddd;
     padding: 25px 15px 15px 15px;
     margin: 40px auto;
@@ -84,6 +86,7 @@ body {
         }
         .qr-lay-1-3 {
             width: 20%;
+            height: 170px;
             .qr-lay-field {
                 text-align: center;
             }
