--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>BITZER - QR Code Generator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" th:href="@{/css/main.css(v=${#dates.createNow().getTime()})}" />
-    <script th:src="@{/js/commons.js}"></script>
+    <link rel="stylesheet" th:href="@{css/main.css(v=${#dates.createNow().getTime()})}" />
+    <script th:src="@{js/commons.js}"></script>
 </head>
 <body>
 
