--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -215,7 +215,7 @@
                             </svg>
                         </div>
 <!--                        <i class="fas fa-download icon-container" title="Download" onclick="displayDownloadModal('${qrCodeId}','${campaignMedium}')"></i>-->
-                        <div class="icon-container" title="Download" onclick="displayDownloadModal('${qrCodeId}','${campaignMedium}')">
+                        <div class="icon-container" title="Download" onclick="displayDownloadModal('${qrCodeId}','${campaignMedium}','${campaignName}','${language}')">
                             <svg class="MP--MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" fill="white"></path>
                             </svg>
@@ -296,9 +296,9 @@
             <button id="close-modal-button" onclick="closeModal('ce-modal-container')">x</button>
             <h2 style="padding-top: 20px" data-translate-key="3">Create new QR code</h2>
             <label for="campaign-name-input" style="text-align: left; padding-left: 95px; margin-top: 30px;">Name of measure</label>
-            <input type="text" data-translate-key="4" placeholder="Campaign Name" id="campaign-name-input"><br>
+            <input type="text" data-translate-key="4" placeholder="Please enter here" id="campaign-name-input"><br>
             <label for="campaign-medium-input" style="text-align: left; padding-left: 95px; margin-top: 15px;">Measure</label>
-            <input type="text" list="mediums-list" data-translate-key="5" placeholder="Campaign Medium" id="campaign-medium-input" autocomplete="off"><br>
+            <input type="text" list="mediums-list" data-translate-key="5" placeholder="Please enter here" id="campaign-medium-input" autocomplete="off"><br>
             <datalist id="mediums-list">
                 <option value="Flyer">
                 <option value="Brochure">
@@ -309,15 +309,15 @@
                 <option value="Merchandise">
             </datalist>
             <label for="language-input" style="text-align: left; padding-left: 95px; margin-top: 15px;">Language</label>
-            <input type="text" list="lang-list" data-translate-key="6" placeholder="Language" id="language-input" autocomplete="off"><br>
+            <input type="text" list="lang-list" data-translate-key="6" placeholder="Please enter here" id="language-input" autocomplete="off"><br>
             <datalist id="lang-list">
                 <option value="German">
                 <option value="English">
             </datalist>
             <label for="tracking-url-input" style="text-align: left; padding-left: 95px; margin-top: 15px;">Tracking URL (editable at a later date)</label>
-            <input type="text" data-translate-key="12" placeholder="Tracking URL" id="tracking-url-input"><br>
+            <input type="text" data-translate-key="12" placeholder="Please enter here" id="tracking-url-input"><br>
             <label for="additional-info-input" style="text-align: left; padding-left: 95px; margin-top: 15px;">Additional information</label>
-            <input type="text" data-translate-key="8" placeholder="Additional Information" id="additional-info-input"><br>
+            <input type="text" data-translate-key="8" placeholder="Please enter here" id="additional-info-input"><br>
             <button id="create-button" data-translate-key="16" onclick="doCreate()">Create</button>
         </div>
         `;
@@ -376,7 +376,10 @@
         var xhr = new XMLHttpRequest();
         xhr.onload = function () {
             if (this.status === 201) {
+                console.log(this.response)
+                console.log(this.responseText)
                 cLog("save qr code success");
+                doPublishUpdate(this.responseText, 'true');
                 closeModal('ce-modal-container');
                 history.go(0);
             } else {
@@ -444,7 +447,7 @@
             <label for="campaign-name-input" style="text-align: left; padding-left: 95px; margin-top: 30px;">Name of measure</label>
             <input type="text" placeholder="${campaignName}" id="campaign-name-input"><br>
             <label for="campaign-medium-input" style="text-align: left; padding-left: 95px; margin-top: 15px;">Measure</label>
-            <input type="text" list="mediums-list" placeholder="${campaignMedium}" id="campaign-medium-input" autocomplete="off"><br>
+            <input type="text" list="mediums-list" placeholder="${campaignMedium}" id="campaign-medium-input" autocomplete="off" disabled><br>
             <datalist id="mediums-list">
                 <option value="Flyer">
                 <option value="Brochure">
@@ -455,7 +458,7 @@
                 <option value="Merchandise">
             </datalist>
             <label for="language-input" style="text-align: left; padding-left: 95px; margin-top: 15px;">Language</label>
-            <input type="text" list="lang-list" placeholder="${language}" id="language-input" autocomplete="off"><br>
+            <input type="text" list="lang-list" placeholder="${language}" id="language-input" autocomplete="off" disabled><br>
             <datalist id="lang-list">
                 <option value="German">
                 <option value="English">
@@ -545,7 +548,7 @@
         xhr.send();
     }
 
-    function displayDownloadModal(qrCodeId, campaignMedium) {
+    function displayDownloadModal(qrCodeId, campaignMedium, campaignName, language) {
         const appDiv = document.getElementById('app');
         let publishModal = document.createElement('div');
         publishModal.setAttribute("id", "download-modal-container");
@@ -555,7 +558,7 @@
             <button id="close-modal-button" onclick="closeModal('download-modal-container')">x</button>
             <p style="padding-top: 25px; padding-bottom: 10px;" data-translate-key="21">Download QR code</p>
             <label data-translate-key="23">File format:</label>
-            <select id="format">
+            <select id="format" onchange="checkModel()">
                 <option value="png">PNG</option>
                 <option value="eps">EPS</option>
             </select><br><br>
@@ -569,14 +572,15 @@
 
             <label data-translate-key="25">Colour mode:</label>
             <select id="model">
-                <option value="rgb">RGB</option>
-                <option value="cmyk">CMYK</option>
+                <option value="rgb">Web (RGB)</option>
+                <option value="cmyk">Print (CMYK)</option>
             </select><br><br>
-            <button id="create-button" style="margin-top: 30px" data-translate-key="22" onclick="doDownload('${qrCodeId}', '${campaignMedium}')">Download</button>
+            <button id="create-button" style="margin-top: 30px" data-translate-key="22" onclick="doDownload('${qrCodeId}', '${campaignMedium}','${campaignName}','${language}')">Download</button>
         </div>
         `;
 
         appDiv.appendChild(publishModal);
+        checkModel();
 
         window.scrollTo(0, 0);
         document.body.style.overflow = "hidden"; // Disable scrolling
@@ -584,7 +588,26 @@
         // doTranslate("download-modal-container");
     }
 
-    function doDownload(qrCodeId, campaignMedium) {
+    function checkModel() {
+        const format = document.getElementById('format').value;
+        const modelSelect = document.getElementById('model');
+
+        // Get references to the two model options
+        const rgbOption = modelSelect.querySelector('option[value="rgb"]');
+        const cmykOption = modelSelect.querySelector('option[value="cmyk"]');
+
+        if (format === 'png') {
+            // Hide or disable CMYK option
+            cmykOption.style.display = 'none';
+            // Ensure the selected model is 'rgb'
+            modelSelect.value = 'rgb';
+        } else {
+            // If EPS, show both
+            cmykOption.style.display = 'block';
+        }
+    }
+
+    function doDownload(qrCodeId, campaignMedium, campaignName, language) {
         let format = document.getElementById("format").value;
         let color = document.getElementById("color").value;
         let model = document.getElementById("model").value;
@@ -605,7 +628,9 @@
                 // Create a download link
                 let link = document.createElement("a");
                 link.href = window.URL.createObjectURL(blob);
-                link.download = `QR_code_${qrCodeId}_${campaignMedium}.${format}`;
+                // link.download = `QR_code_${qrCodeId}_${campaignMedium}.${format}`;
+                let lan = language === 'English' ? 'en' : 'de';
+                link.download = `QR_${qrCodeId}_${campaignName}_${campaignMedium}_${lan}_${model}.${format}`;
                 document.body.appendChild(link);
                 link.click();
                 document.body.removeChild(link);
@@ -635,6 +660,15 @@
                     // if (currentUser.roles.PIMEDIA_ORGANISATION !== "administrator") {
                     //     document.getElementById("settings_img").style.display="none";
                     // }
+                    const mpRole = currentUser.roles.PIMEDIA_DATABASE;
+                    if (mpRole === "administrator" ||
+                        mpRole === "Power User"   ||
+                        mpRole === "Casual User Plus") {
+                        cLog(`Role ${mpRole} allowed.`)
+                    } else {
+                        cLog(`Role ${mpRole} not allowed. Redirecting...`);
+                        window.location.replace(serverUrl);
+                    }
                 } else {
                     console.log("get current user error", this.status);
                     window.location.replace(serverUrl);
